# Novara

./: pyproject.toml
.github/: RELEASE_TEMPLATE.md
docs/: Blueprint.docx  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md
src/: main.py
src/app/clients/: googlegemini.py  jikan.py  omdb.py
src/app/ui_components/: anime_details.py  cards.py  movie_details.py  styles.py  watchlist_display.py
src/app/utils/: api_keys.py  watchlist.py
